--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23008,3 +23008,10 @@ body{
     font-weight: lighter !important;
 }
 
+@media only screen and (max-width: 1000px) {
+    #flipkart-navbar > div > div.row.row2 > div.cart.col-sm-1 > li > a > h6 > i
+    {
+        display: none;
+    }
+}
+
