watch shop for all now works

--- a/public/frontend_2/html_width_RTL/css/home2.css
+++ b/public/frontend_2/html_width_RTL/css/home2.css
@@ -3196,7 +3196,14 @@ h2.title-category {
 .label-sale {
   background: #e74c3c;
   top: 10px;
-  right: 10px; }
+  right: 10px;
+}
+
+.label-counts {
+  background: green;
+  top: 10px;
+  right: 10px;
+}
   .label-sale:after {
     content: "";
     border-top: 9px solid #e74c3c;
